@@ -3,11 +3,10 @@
 ![Tests](https://github.com/python-babel/flask-babel/workflows/Tests/badge.svg?branch=master)
 [![PyPI](https://img.shields.io/pypi/v/flask-babel.svg?maxAge=2592000)](https://pypi.python.org/pypi/Flask-Babel)
 
-Implements i18n and l10n support for Flask.  This is based on the Python
-[babel][] module as well as [pytz][] both of which are installed automatically
-for you if you install this library.
+Implements i18n and l10n support for Flask. This is based on the Python
+[babel][] and [pytz][] modules.
 
-# Documention
+## Documentation
 
 The latest documentation is available [here][docs].
 
