@@ -31,7 +31,7 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.7"
 pytz = "^2022.7"
-Flask = "^2.2.2"
+Flask = "^2.0.0"
 Babel = "^2.11.0"
 Jinja2 = "^3.1.2"
 
